@@ -24,6 +24,9 @@
 	- permit build scriptlet interpreters to be individually overridden.
 	- zlib: uniqify certain symbols to prevent name space pollution.
 	- macosx: include <sys/types.h> so that python sees the u_char typedef.
+	- macosx: change to --prefix=/usr rather than /opt/local.
+	- use waitpid rather than SIGCHLD reaper.
+	- rip out DB_PRIVATE revert if not NPTL, it's not the right thing to do.
 
 4.3.3 -> 4.4:
 	- pentium3/pentium4 arch support (pluto@PLD).
